feat: add 分项记录
close #19
